# viam-mycobot

./: .gitignore  .viam-gen-info  README.md  meta.json  pyproject.toml  setup.sh
assets/: mycobot_280_pi.urdf
src/: controller.py  main.py  mycobot_280_arm.py  mycobot_gripper.py
src/utils/: spatialmath.py
